--- a/task-1/CMakeLists.txt
+++ b/task-1/CMakeLists.txt
@@ -3,4 +3,6 @@ project(task_1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(task_1 main.cpp)
+add_executable(task_1 main.cpp
+        src/BitArray.cpp
+        src/BitArray.h)
