--- a/task-1/Google_tests/CMakeLists.txt
+++ b/task-1/Google_tests/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 # adding the Google_Tests_run target
-add_executable(main.cpp BitArrayTest.cpp)
+add_executable(Google_Tests_run main.cpp BitArrayTest.cpp)
 
 # linking Google_Tests_run with DateConverter_lib which will be tested
 target_link_libraries(Google_Tests_run ${CMAKE_PROJECT_NAME}_lib)
