--- a/task-2/src/CMakeLists.txt
+++ b/task-2/src/CMakeLists.txt
@@ -1,11 +1,15 @@
 set(SOURCES
         Game.cpp
-        CommandHandler.cpp
         Grid.cpp
         Rule.cpp
         Universe.cpp
         UniverseReader.cpp
-        UniverseWriter.cpp)
+        UniverseWriter.cpp
+        HelpHandler.cpp
+        ExitHandler.cpp
+        DumpHandler.cpp
+        TickHandler.cpp
+        CommandProcessor.cpp)
 
 set(HEADERS
         Game.h
@@ -14,6 +18,12 @@ set(HEADERS
         Rule.h
         Universe.h
         UniverseReader.h
-        UniverseWriter.h)
+        UniverseWriter.h
+        HelpHandler.cpp
+        HelpHandler.h
+        ExitHandler.h
+        DumpHandler.h
+        TickHandler.h
+        CommandProcessor.h)
 
 add_library(${CMAKE_PROJECT_NAME}_lib STATIC ${SOURCES} ${HEADERS})
